2002-03-10  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/gnustep/base/NSInvocation.h:
	* Headers/gnustep/base/NSNumberFormatter.h:
	* Headers/gnustep/base/NSObject.h:
	Minor fixes to build with STRICT_OPENSTEP

Sat Mar  9 15:21:04 2002  Adam Fedor  <fedor@yogi.doc.com>

	* Source/NSDistributedNotificationCenter.m (-_connect): Move check
	for alternative name so we can get registered.
 	
2002-03-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDistributedNotificationCentre.m: Try alternative name for
	server if NSHost is specified ...in case it is running on another host.

Sat Mar  9 12:02:45 2002  Adam Fedor  <fedor@yogi.doc.com>

	* configure.in: Change constant string to FooConstantString
	* config/config.constant-string-class.m: Work with NeXT_RUNTIME
	(patch from Markus Hitter [mah@jump-ing.de]).

2002-03-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSFileManager.m: Change copy so that, if the source argument
	is a symbolic link, we copy the link rather than the thing it points
	to.
	* Tools/gdnc.m: Quick hack to register port with other names is NSHost
	is used.

2002-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Unicode.m: Added BIG5 encoding
	* Headers/Foundation/NSString.h: Added BIG5 encoding
	* Resources/Languages/Locale.aliases: added traditional chinese
	Extensions for traditional chinese requested by Yen-Ju Chen

2002-03-08  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GNUmakefile: Include ../../base.make
	* SSL/GNUmakefile: Include ../base.make
	from the makefiles directory for builting standalone.
	* Source/Unicode.m: Added some standard string handling for iconv.
	* Source/NSString.m: ([-initWithData:encoding:]) return nil on
	failure to handle encoding.
	* Source/NSMapTable.m: NSMapInsert() fixed to conform to spec.
	* Source/NSHashTable.m: NSHashInsert() fixed to conform to spec.
	Reports by Alexander Malmberg

2002-03-07  Pierre-Yves Rivaille <pyrivail@ens-lyon.fr>
